<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.epam.jmp.tabayeu</groupId>
  <artifactId>memory</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>memory</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
	    <groupId>javassist</groupId>
	    <artifactId>javassist</artifactId>
	    <version>3.12.0.GA</version>
	</dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
      <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>2.9</version>
		    <configuration>
		        <argLine>-Xmx100M -XX:MaxPermSize=512k -XX:-UseGCOverheadLimit</argLine>
		    </configuration>
		</plugin>
    </plugins>
  </build>
  
</project>
